--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,9 @@ license = "MIT/Apache-2.0"
 travis-ci = { repository = "michaelfairley/rust-imgui-sdl2" }
 
 [dependencies]
-imgui = "0.5"
+imgui = { git = "https://github.com/vinterskog/imgui-rs" }
 sdl2 = "0.34"
 
 [dev-dependencies]
 gl = "0.10.0"
-imgui-opengl-renderer = "0.9"
+imgui-opengl-renderer = { git = "https://github.com/vinterskog/rust-imgui-opengl-renderer" }
